<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_20"
        android:paddingRight="@dimen/padding_20"
        android:paddingTop="@dimen/padding_10" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_range"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_20"
            android:paddingTop="@dimen/padding_10" >

            <TextView
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="2013-12-12"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="2013-12-12"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_1_px"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_5"
            android:paddingTop="@dimen/padding_10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dicom_type"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dicom_all_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />
        </RelativeLayout>

        <image.medical.idcm.widgets.ExpandableGridView
            android:id="@+id/dicom_type_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:listSelector="@color/transparent"
            android:paddingBottom="@dimen/padding_20" >
        </image.medical.idcm.widgets.ExpandableGridView>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_1_px"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_5"
            android:paddingTop="@dimen/padding_10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_status"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/report_all_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/all"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_20"
            android:paddingTop="@dimen/padding_10" >

            <TextView
                android:id="@+id/no_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_apply"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/applyed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/applyed"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/no_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no_check"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/checked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/checked"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>