<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/header_directory" />

    <ListView
        android:id="@+id/file_directory_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:dividerHeight="@dimen/split_1_px" >
    </ListView>

    <LinearLayout
        android:id="@+id/edit_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_44"
        android:background="@color/black_deep"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_selector"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/selected"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_selector"
            android:gravity="center"
            android:text="@string/all_selected"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_selector"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />
    </LinearLayout>

</LinearLayout>