<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <image.medical.idcm.widgets.DViewPager
        android:id="@+id/dicom_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <image.medical.idcm.edit.views.DcmSnap
        android:id="@+id/dicom_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <image.medical.idcm.edit.views.HeaderDisplay
        android:id="@+id/dicom_header_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </image.medical.idcm.edit.views.HeaderDisplay>

    <image.medical.idcm.edit.views.HeaderZoom
        android:id="@+id/dicom_header_zoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </image.medical.idcm.edit.views.HeaderZoom>

    <image.medical.idcm.edit.views.HeaderMeasure
        android:id="@+id/dicom_header_measure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </image.medical.idcm.edit.views.HeaderMeasure>

    <image.medical.idcm.edit.views.FloatSeries
        android:id="@+id/float_series"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_70"
        android:layout_above="@+id/footer"
        android:background="@color/black_deep" >
    </image.medical.idcm.edit.views.FloatSeries>

    <image.medical.idcm.edit.views.FloatEdit
        android:id="@+id/float_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:background="@color/black_deep" >
    </image.medical.idcm.edit.views.FloatEdit>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_60"
        android:layout_alignParentBottom="true"
        android:background="@color/black_deep"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/split_1"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/series_thumb"
                    android:layout_width="@dimen/width_36"
                    android:layout_height="@dimen/height_36"
                    android:background="@drawable/round_bg_selector"
                    android:padding="@dimen/padding_8"
                    android:src="@drawable/sequence" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/series"
                    android:textColor="@color/light_gray_3"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/edit"
                    android:layout_width="@dimen/width_36"
                    android:layout_height="@dimen/height_36"
                    android:background="@drawable/round_bg_selector"
                    android:padding="@dimen/padding_8"
                    android:src="@drawable/edit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit"
                    android:textColor="@color/light_gray_3"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/more"
                    android:layout_width="@dimen/width_36"
                    android:layout_height="@dimen/height_36"
                    android:background="@drawable/round_bg_selector"
                    android:padding="@dimen/padding_8"
                    android:src="@drawable/more" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textColor="@color/light_gray_3"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>